--- a/data-liga/css/style.css
+++ b/data-liga/css/style.css
@@ -28,7 +28,7 @@ body {
   flex-direction: column;
   line-height: 1;
   font-size: 20px;
-  font-weight: 300;
+  font-weight: bold;
 }
 
 .main-wrapper {
@@ -81,8 +81,19 @@ body {
   overflow-x: scroll;
 }
 
+.btn-change-league {
+  color: white;
+  margin: 4px 10px;
+  cursor: pointer;
+  border-radius: 16px;
+}
+
+.change-league {
+  margin-bottom: 10px;
+}
+
 .title-matches {
-  font-size: 28px;
+  font-size: 35px;
   font-weight: bold;
 }
 
@@ -129,12 +140,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-}
-
-.team-card-table {
-  margin-top: 20px;
-  overflow: hidden;
-  overflow-x: scroll;
+  margin-bottom: 10px;
 }
 
 .team-info {
@@ -180,6 +186,22 @@ body {
   line-height: 5px;
 }
 
+.card-detail-center {
+  text-align: center;
+  background-color: #81d4fa;
+}
+
+.detail-name {
+  font-size: large;
+  font-weight: bold;
+  color: red;
+}
+
+.detail-all {
+  font-size: medium;
+  color: red;
+}
+
 .btn-team {
   width: 155px;
 }
@@ -207,25 +229,22 @@ body {
 .favorite-team-card-item {
   display: flex;
   flex-direction: column;
+  text-align: center;
   align-items: center;
   justify-content: center;
   margin: 0 17px;
   cursor: pointer;
+  background-color: #81d4fa;
 }
 
-.favorite-team-img-wrapper {
-  width: 100px;
-  height: 100px;
-}
-
-.favorite-team-card-item img {
-  width: 100%;
-  height: 100%;
+.favorite-team-img-wrapper img {
+  width: 110px;
+  height: 110px;
   object-fit: contain;
 }
 
 .favorite-team-card-item p {
-  max-width: 95px;
+  max-width: 120px;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
@@ -246,6 +265,7 @@ body {
 
   .team-card-title {
     flex-direction: column;
+    margin-bottom: 10px;
   }
 
   .detail-logo-info {
